# ZipherX

./: .gitignore  ADDING_PARALLEL_IMPORT_FILES.md  ANCHOR_MISMATCH_ANALYSIS.md  BOOST_FILE_BLOCKCHAIN_MISMATCH_RESOLVED.md  CLAUDE.md  CLAUDE_FULL_BACKUP.md  COMPACT_BLOCK_IMPLEMENTATION_PLAN.md  DISCLAIMER.md  HEADER_SYNC_IMPLEMENTATION_PLAN.md  Info-macOS.plist  Info.plist  LICENSE  Package.swift  QUICK_FIX.md  README.md  SECURITY_AUDIT_REMEDIATION.html  SECURITY_AUDIT_REMEDIATION_PROMPT.md  SECURITY_FINDINGS_VERIFICATION.md  SESSION_SUMMARY.md  SESSION_SUMMARY_FIX_510-514.md  TOR_ISSUES_TO_INVESTIGATE.md  TRANSACTION_DEBUGGING.md  TREE_ROOT_INCOMPATIBILITY_INVESTIGATION.md  ZIPHERX_COMPREHENSIVE_AUDIT_2025-12-19.html  ZIPHERX_COMPREHENSIVE_AUDIT_2025-12-19.md  ZipherX-iOS-Wallet-Architecture.md  ZipherX.entitlements  ZipherXMac.entitlements  analyze_log.sh  analyze_tx_structure.py  check_import_progress.sh  get_block_headers.py  monitor_import_pk.sh  prepare_test.sh  project.yml  quick_test.sh  run_all_tests.sh  scan_zclassic_peers.py  scan_zclassic_peers_v2.py  test_anchor_validation.py  (+18 more)
.claude/: settings.local.json
Assets.xcassets/AppIcon.appiconset/: Contents.json
Assets.xcassets/ZipherpunkLogo.imageset/: Contents.json
Libraries/: build_ffi.sh  build_sqlcipher.sh
Libraries/SQLCipher.xcframework/: Info.plist
Libraries/ZipherXFFI.xcframework/: Info.plist
Libraries/zcash_primitives_zcl/: .cargo_vcs_info.json  Cargo.toml
Libraries/zcash_primitives_zcl/src/: consensus.rs
Libraries/zipherx-ffi/: Cargo.toml  build_all.sh  tt
Libraries/zipherx-ffi/ZipherXFFI.xcframework/: Info.plist
Libraries/zipherx-ffi/ZipherXFFI.xcframework/ios-arm64-simulator/Headers/: zipherx_ffi.h
Libraries/zipherx-ffi/include/: zipherx_ffi.h
Libraries/zipherx-ffi/macos-arm64_x86_64/Headers/: zipherx_ffi.h
Libraries/zipherx-ffi/src/: download.rs  lib.rs  tor.rs
Libraries/zipherx-ffi/tests/: test_address_ops.rs  test_equihash.rs  test_ffi_safety.rs  test_key_derivation.rs  test_key_encoding.rs  test_note_crypto.rs  test_tree_ops.rs  test_utility.rs  test_witness_ops.rs
Libraries/zipherx-ffi/tests/common/: mod.rs
Resources/: bundled_peers.json  commitment_tree_complete.progress  commitment_tree_manifest.json
Resources/Binaries/: zclassic-cli  zclassic-tx
Sources/: ZipherX-Bridging-Header.h
Sources/App/: AppDelegate.swift  ContentView.swift  DisclaimerView.swift  WalletSetupView.swift  ZipherXApp.swift
Sources/App/ModeSelection/: ModeSelectionView.swift
Sources/Core/: Constants.swift
Sources/Core/Cache/: FastWalletCache.swift
Sources/Core/Chat/: ChatManager.swift  CypherpunkChat.swift  VoiceCallManager.swift
Sources/Core/Crypto/: BlockHeader.swift  RustBridge.swift  SaplingParams.swift  TransactionBuilder.swift  ZipherXFFI.swift
Sources/Core/Data/: PrivacyQuotes.swift
Sources/Core/FullNode/: BootstrapManager.swift  BootstrapProgressView.swift  FullNodeManager.swift  RPCClient.swift  WalletMode.swift
Sources/Core/Models/: BlockHeader.swift
Sources/Core/Network/: AsyncTimeout.swift  BundledBlockHashes.swift  BundledShieldedOutputs.swift  Checkpoints.swift  FilterScanner.swift  (+7 more)
Tests/UnitTests/: WalletTests.swift
Tools/: README_VERIFICATION.md  build_commitment_tree.swift  build_sapling_tree.sh  build_tree_from_cmus  build_tree_from_cmus.swift  build_tree_with_witnesses.swift  build_witnesses.sh  check_app_bundle.sh  commitment_tree_meta.json  compare_trees.py  create_dmg.sh  export_complete_tree.py  export_progress.json  export_progress_v7.json  export_recent_tree.py  export_tree_direct.py  export_tree_fast.py  export_tree_fast2.py  export_tree_optimized.py  export_tree_parallel.py  export_tree_reliable.py  export_tree_ultrafast.py  export_tree_ultrafast_v2.py  parse_tx_anchor.py  publish_commitment_tree.py  sapling_tree_meta.json  verify_anchor.py  verify_tree.py  verify_tree.swift
ZipherX.xcodeproj/: project.pbxproj
docs/: AppIcon_Generator.html  BUG_FIXES.md  COMPREHENSIVE_SECURITY_AUDIT_2025-12-05.html  COMPREHENSIVE_SECURITY_AUDIT_2025-12-05.md  SECURITY.md  SECURITY_AUDIT_2025-11-30.html  SECURITY_AUDIT_2025-12-03.html  SECURITY_AUDIT_2025-12-03.md  SECURITY_AUDIT_FINAL_2025-12-04.html  SECURITY_AUDIT_FINAL_2025-12-04.md  SECURITY_AUDIT_FULL_2025-12-04.html  SECURITY_AUDIT_FULL_2025-12-04.md  SECURITY_AUDIT_REPORT.html  SESSION_SUMMARY_2025-11-28.md  SQLCIPHER_SETUP.md  TESTFLIGHT_RELEASE_GUIDE.md  TXN_STARTUP.md  ZIPHERX_ANALYSIS_REPORT.html  ZIPHERX_AUDIT_REPORT.html  ZIPHERX_AUDIT_REPORT.md  ZipherX.html  generate_gif.py  sapling-decryption-byte-order-fix.md  zclassic_p2p_protocol.html
test_decrypt_rust/: Cargo.toml
test_decrypt_rust/src/: main.rs
zclassic-fork/doc/: build-macos-arm64.md
zclassic-fork/src/: Makefile.gtest.include  bitcoind.cpp  init.cpp  main.cpp  protocol.h
(+69 files in other folders)
