[package]
name = "zipherx-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "zipherx_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bip0039 = "0.12"
rand_core = "0.6"
libc = "0.2"
blake2b_simd = "1.0"
hex = "0.4"
bech32 = "0.9"

# Real Zcash/Sapling cryptography
# Using local fork with Zclassic Buttercup branch ID support
zcash_primitives = { path = "../zcash_primitives_zcl" }
zcash_proofs = "0.13"
zcash_address = "0.3"
zcash_note_encryption = "0.4"
incrementalmerkletree = "0.5"
jubjub = "0.10"
group = "0.13"
ff = "0.13"
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
bls12_381 = "0.8"
equihash = "0.2"

[[bin]]
name = "verify_tree"
path = "src/bin/verify_tree.rs"

[profile.release]
lto = true
opt-level = "z"

[patch.crates-io]
# Override all zcash_primitives dependencies to use our local fork with Zclassic Buttercup support
zcash_primitives = { path = "../zcash_primitives_zcl" }
