[package]
name = "zipherx-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "zipherx_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
bip0039 = "0.12"
rand_core = "0.6"
libc = "0.2"
blake2b_simd = "1.0"
hex = "0.4"
bech32 = "0.9"

# Real Zcash/Sapling cryptography
# Using local fork with Zclassic Buttercup branch ID support
zcash_primitives = { path = "../zcash_primitives_zcl" }
zcash_proofs = "0.13"
zcash_address = "0.3"
zcash_note_encryption = "0.4"
incrementalmerkletree = "0.5"
jubjub = "0.10"
group = "0.13"
ff = "0.13"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
rayon = "1.8"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
ureq = { version = "2.9", features = ["json"] }
base64 = "0.21"
bls12_381 = "0.8"
equihash = "0.2"

# Arti - Rust implementation of Tor for embedded use
arti-client = { version = "0.37", default-features = false, features = ["tokio", "rustls"] }
tor-rtcompat = { version = "0.37", features = ["tokio", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "io-util", "net", "macros"] }
once_cell = "1.19"
url = "2.5"

[[bin]]
name = "verify_tree"
path = "src/bin/verify_tree.rs"

[[bin]]
name = "bench_decrypt"
path = "src/bin/bench_decrypt.rs"

[[bin]]
name = "verify_balance"
path = "src/bin/verify_balance.rs"

[profile.release]
lto = true
opt-level = "z"

[patch.crates-io]
# Override all zcash_primitives dependencies to use our local fork with Zclassic Buttercup support
zcash_primitives = { path = "../zcash_primitives_zcl" }
